# DTSA-5510-Spotify-Million-Song

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 🤖_DTSA_5510_Clustering_Spotify_Million_Song.html  🤖_DTSA_5510_Clustering_Spotify_Million_Song.ipynb
