[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dtsa_5510_spotify_million_song"
version = "0.0.1"
description = "This project utilizes the Spotify Million Song Dataset, which includes song titles, artist names, song links, and lyrics. This dataset is suitable for various applications, such as song recommendation and classification. This project specifically explores different clustering techniques from the scikit-learn library."
authors = [
  { name = "Korkrid Kyle Akepanidtaworn" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["dtsa_5510_spotify_million_song"]
force_sort_within_sections = true
